<resources>
    <string name="app_name">BouncingBall</string>

    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>

    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="button_set_color"> Set Color</string>
    <string name="button_color_ball">Ball</string>
    <string name="button_background">Background</string>
    <string name="button_ok">OK</string>
    <string name="label_select">Select acceleration</string>
    <string name="label_a0">9.7</string>
    <string name="label_a1">15.7</string>
    <string name="label_a2">23.7</string>
</resources>
